scrollbar-gutter fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&subset=cyrillic-ext');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed&subset=cyrillic-ext');
 
+html { 
+  scrollbar-gutter: stable both-edges;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 20px;
